@@ -16,17 +16,16 @@
  *   Free Software Foundation, Inc.,                                       *
  *   59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.             *
  ***************************************************************************/
-/*===========================================================================
-//  SVN properties (DO NOT CHANGE)
-
-//  $Id$
-//  $HeadURL$
-//  $LastChangedRevision$
-//  $Author$
-//  $LastChangedDate$
-
-// ============================================================================
-*/
+//===========================================================================
+// SVN properties (DO NOT CHANGE)
+//
+// $Id$
+// $HeadURL$
+// $LastChangedRevision$
+// $Author$
+// $LastChangedDate$
+//
+//============================================================================
 
 #ifndef __DIFX_INPUT_H__
 #define __DIFX_INPUT_H__
@@ -204,6 +203,7 @@ enum DataSource
     DataSourceFile,
     DataSourceNetwork,
     DataSourceFake,
+	DataSourceMark6,
     NumDataSources      /* must remain as last entry */
 };
 
